Angular FE Panel - Initial commit

--- a/src/main/resources/covid19-case-reporting-WEB/package.json
+++ b/src/main/resources/covid19-case-reporting-WEB/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "black-dashboard-angular",
+  "name": "covid19-case-reporting-panel",
   "version": "1.1.0",
-  "description": "Black Dasboard Angular, a Creative Tim Desgin. Coded by Creative Tim",
+  "description": "Ethio Covid19 Case Reporting Panel",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "generate": "swagger-angular-generator -s ../../resources/schema/swagger/covid19-swagger-spec.yml -d src/app/model",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -16,50 +17,9 @@
     "url": "git+https://github.com/creativetimofficial/black-dashboard-angular.git"
   },
   "keywords": [
-    "angular dashboard",
-    "angular admin",
-    "angular bootstrap admin",
-    "angular bootstrap dashboard",
-    "angular panel",
-    "angular bootstrap template",
-    "angular admin template",
-    "angular free",
-    "angular free dashboard",
-    "angular free bootstrap dashboard",
-    "free admin template",
-    "angular admin",
-    "angular admin panel",
-    "angular dashboard",
-    "angular dashboard free",
-    "angular admin free",
-    "angular free admin panel",
-    "angular freebie",
-    "angular freebie dashboard",
-    "angular freebie bootstrap dashboard",
-    "freebie admin template",
-    "angular dashboard freebie",
-    "angular admin freebie",
-    "angular freebie admin panel",
-    "creative tim",
-    "web dashboard",
-    "bootstrap 4 dashboard",
-    "bootstrap 4",
-    "css3 dashboard",
-    "bootstrap 4 admin",
-    "black dashboard bootstrap 4",
-    "frontend",
-    "responsive bootstrap 4 dashboard",
-    "free dashboard",
-    " free admin dashboard",
-    "free bootstrap 4 admin dashboard"
+    "Covid19 Case Reporting Panel",
+    "Ethio Covid19 Case Reporting and Followup"
   ],
-  "author": "Creative Tim <hello@creative-tim.com> (https://www.creative-tim.com/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/black-dashboard-angular/issues"
-  },
-  "homepage": "https://demos.creative-tim.com/black-dashboard-angular/#/dashboard",
-  "private": false,
   "dependencies": {
     "@angular/animations": "9.0.5",
     "@angular/common": "9.0.5",
@@ -75,6 +35,7 @@
     "core-js": "3.6.4",
     "ngx-toastr": "10.0.4",
     "rxjs": "6.5.2",
+    "swagger-angular-generator": "^4.2.1",
     "tslib": "1.10.0",
     "zone.js": "0.10.2"
   },
